--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-boto3==1.20.32
-crepe==0.0.12
-librosa==0.8.1
-matplotlib==3.2.2
-numpy==1.22.4
-openai==0.8.0
-pandas==1.3.5
-Pillow==9.1.1
-pydub==0.25.1
-Pyphen==0.12.0
-scikit_image==0.15.0
-scipy==1.4.1
-seaborn==0.11.2
-spacy==3.3.0
-tensorboardX==2.5.1
-torch==1.11.0
-torchtext==0.12.0
-tqdm==4.64.0
+boto3>=1.20.32
+crepe>=0.0.12
+librosa>=0.8.1
+matplotlib>=3.2.2
+numpy>=1.21.6
+openai>=0.8.0
+pandas>=1.3.5
+Pillow>=9.1.1
+pydub>=0.25.1
+Pyphen>=0.12.0
+scikit_image>=0.15.0
+scipy>=1.4.1
+seaborn>=0.11.2
+spacy>=3.3.0
+tensorboardX>=2.5.1
+torch>=1.11.0
+torchtext>=0.12.0
+tqdm>=4.64.0
 transformers==4.6.1
