--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ scikit_image>=0.15.0
 scipy>=1.4.1
 seaborn>=0.11.2
 spacy>=3.3.0
-tensorboardX>=2.5.1
-torch>=1.11.0
-torchtext>=0.12.0
+tensorboardX<=2.5.1
+torch==1.10.1
+torchtext==0.11.1
 tqdm>=4.64.0
 transformers==4.6.1
